--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,8 +154,8 @@
   }
   
   .btn-primary:is(:hover, :focus) {
-    background: var(--yale-blue);
-    border-color: var(--yale-blue);
+    background: var(--spanish-gray);
+    border-color: var(--spanish-gray);
   }
   
   .btn-secondary { border-color: var(--white); }
@@ -349,7 +349,7 @@
   
   .navbar-link {
     padding: 15px 20px;
-    color: var(--white);
+    color: var(--bright-navy-black);
     font-weight: var(--fw-500);
     font-size: var(--fs-4);
     transition: var(--transition);
@@ -686,7 +686,7 @@
   \*-----------------------------------*/
   
   .cta {
-    background: var(--bright-navy-blue);
+    background: var(--spanish-gray);
     padding-block: var(--section-padding);
   }
   
