--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@
   .h1 {
     color: var(--white);
     font-size: var(--fs-1);
+    text-align: center;
   }
   
   .h2,
@@ -382,7 +383,7 @@
   \*-----------------------------------*/
   
   .hero {
-    background-image: url("../images/hero-banner.JPG");
+    background-image: url("../images/hero-banner.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -421,14 +422,29 @@
   
   .tour-search {
     background: var(--gunmetal);
-    padding-block: var(--section-padding);
-    justify-items: center;
+   
+  
   }
-  .tour-search h1 {
+  .tour-search-about {
     color: var(--white);
-    justify-items: center;
+    
+    position: relative;
+    font-family: var(--ff-montserrat);
+    font-weight: var(--fw-500);
+    margin-bottom: 30px;
     /* align-content: center; */
     /* border-bottom: 1px solid var(--white); */
+    
+  }
+  .tour-search-about::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background: var(--bright-navy-blue);
+
   }
   
   .tour-search-form .input-label {
